flickr API working image model done

--- a/instagraff/package.json
+++ b/instagraff/package.json
@@ -4,7 +4,10 @@
   "description": "Instagram for graffers",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js",
+    "prebuild:css": "rimraf \"static/css\"",
+    "build:css": "node scripts/build-css.js",
+    "watch:css": "chokidar \"src/css/*.css\" --c \"npm run build:css\"",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "repository": {
@@ -21,17 +24,28 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "chokidar-cli": "^2.1.0",
     "cookie-parser": "^1.4.5",
+    "coordinates-converter": "0.0.2",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.2",
+    "exif": "^0.6.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "flickrapi": "^0.6.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "mapbox-gl": "^1.9.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.9",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "rimraf": "^3.0.2",
     "session": "^0.1.0",
     "socket.io": "^2.3.0"
   },
