--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "path": "^0.12.7",
     "rimraf": "^3.0.2",
     "session": "^0.1.0",
